--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-  	<title>modul9</title>
+  	<title>9.5</title>
 	</head>
 	<body>
+			<button class="button" id="button2">Hey!</button>
+			<button class="button">Hi!</button>
+			<button class="button">Hello!</button>
 		<script type="text/javascript" src="scripts.js"></script>
 	</body>
 </html>
+
