--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-  	<title>modul9</title>
+  	<link rel="stylesheet" href="style.css"></link>
+  	<title>9.6</title>
 	</head>
 	<body>
+		<ul id="list">
+			<li>item 0</li>
+		</ul>
+		<button id="addElem">Dodaj</button>
+
 		<script type="text/javascript" src="scripts.js"></script>
 	</body>
 </html>
