--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   	<title>9.5</title>
 	</head>
 	<body>
-			<button class="button" id="button2">Hey!</button>
+			<button class="button">Hey!</button>
 			<button class="button">Hi!</button>
 			<button class="button">Hello!</button>
 		<script type="text/javascript" src="scripts.js"></script>
